# promptleak

./: .gitignore  LICENSE  README.md  ROADMAP.md  SCOPE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PAYLOADS.md
labs/: clean_server.py  poisoned_description_server.py  poisoned_response_server.py
src/promptleak/: bootstrap.py
src/promptleak/application/use_cases/: scan_server_use_case.py
src/promptleak/domain/: entities.py  value_objects.py
src/promptleak/domain/ports/: mcp_server_port.py  payload_repository_port.py  test_agent_port.py
src/promptleak/domain/services/: dynamic_analysis_service.py  scoring_service.py  static_analysis_service.py
src/promptleak/infrastructure/adapters/agent/: anthropic_test_agent_adapter.py
src/promptleak/infrastructure/adapters/mcp/: mcp_sdk_server_adapter.py
src/promptleak/infrastructure/adapters/payloads/: payloads.yaml  static_payload_repository.py
src/promptleak/interface/cli/: cli.py  presenter.py
tests/integration/: test_anthropic_test_agent_adapter.py  test_mcp_sdk_server_adapter.py  test_static_scan_end_to_end.py
tests/unit/application/: test_scan_server_use_case.py
tests/unit/domain/: test_dynamic_analysis_service.py  test_entities.py  test_scoring_service.py  test_static_analysis_service.py  test_value_objects.py
tests/unit/infrastructure/: test_static_payload_repository.py
tests/unit/interface/: test_cli.py
